--- a/WeatherApp/View/HomePage.xaml
+++ b/WeatherApp/View/HomePage.xaml
@@ -7,7 +7,6 @@
              x:DataType="viewmodel:HomeViewModel"
              BackgroundImageSource="sunny.png"
              Title="Home">
-             <!--BackgroundColor="{Binding BackgroundColor}"-->
 
     <ContentPage.Behaviors>
         <toolkit:EventToCommandBehavior Command="{Binding AppearingCommand}" EventName="Appearing" />
@@ -34,28 +33,28 @@
             <VerticalStackLayout>
                 <HorizontalStackLayout>
                     <Label Text="{Binding CurrentTemp, StringFormat='{0:F1}°'}" 
-                                   TextColor="White"
-                                    FontSize="40"
-                                    FontFamily="Impact"
-                                    FontAttributes="Bold" VerticalOptions="Center"/>
-                    <Image HeightRequest="80" WidthRequest="80" Source="{Binding CurrentWeather.Condition.Icon, StringFormat='https:{0}'}"/>
+                        TextColor="White"
+                        FontSize="40"
+                        FontFamily="Impact"
+                        FontAttributes="Bold" VerticalOptions="Center"/>
+                    <Image HeightRequest="100" WidthRequest="100" Source="{Binding CurrentWeather.Condition.Icon, StringFormat='https:{0}'}"/>
                 </HorizontalStackLayout>
                 <HorizontalStackLayout>
                     <Label Text="High: "></Label>
-                    <Label IsVisible="{Binding IsCelsius}" Text="{Binding WeatherForecastDays[0].Day.MaxtempC}"/>
-                    <Label IsVisible="{Binding IsFerenheit}" Text="{Binding WeatherForecastDays[0].Day.MaxtempF}"/>
+                    <Label IsVisible="{Binding IsCelsius}" Text="{Binding WeatherForecastDays[0].Day.MaxtempC, StringFormat='{0:F1}°'}"/>
+                    <Label IsVisible="{Binding IsFerenheit}" Text="{Binding WeatherForecastDays[0].Day.MaxtempF, StringFormat='{0:F1}°'}"/>
                     <Label Text=" / "></Label>
                     <Label Text="Low: "></Label>
-                    <Label IsVisible="{Binding IsCelsius}" Text="{Binding WeatherForecastDays[0].Day.MintempC}"/>
-                    <Label IsVisible="{Binding IsFerenheit}" Text="{Binding WeatherForecastDays[0].Day.MintempF}"/>
+                    <Label IsVisible="{Binding IsCelsius}" Text="{Binding WeatherForecastDays[0].Day.MintempC, StringFormat='{0:F1}°'}"/>
+                    <Label IsVisible="{Binding IsFerenheit}" Text="{Binding WeatherForecastDays[0].Day.MintempF, StringFormat='{0:F1}°'}"/>
                 </HorizontalStackLayout>
             </VerticalStackLayout>
             <VerticalStackLayout VerticalOptions="Center">
                 <Label Text="{Binding CurrentWeather.Condition.Text}" HorizontalOptions="End" FontAttributes="Bold" FontSize="18"/>
                 <HorizontalStackLayout HorizontalOptions="End">
                     <Label Text="Feels like: "/>
-                    <Label IsVisible="{Binding IsCelsius}" Text="{Binding CurrentWeather.FeelslikeC}" HorizontalOptions="Center"/>
-                    <Label IsVisible="{Binding IsFerenheit}" Text="{Binding CurrentWeather.FeelslikeF}" HorizontalOptions="Center"/>
+                    <Label IsVisible="{Binding IsCelsius}" Text="{Binding CurrentWeather.FeelslikeC, StringFormat='{0:F1}°'}" HorizontalOptions="Center"/>
+                    <Label IsVisible="{Binding IsFerenheit}" Text="{Binding CurrentWeather.FeelslikeF, StringFormat='{0:F1}°'}" HorizontalOptions="Center"/>
                 </HorizontalStackLayout>
             </VerticalStackLayout>
         </FlexLayout>
@@ -66,12 +65,12 @@
                 <StackLayout VerticalOptions="Center">
                     <HorizontalStackLayout HorizontalOptions="Center">
                         <Button Text="Hourly" Padding="0" WidthRequest="124" Margin="10, 0, 0, 0"
-                                CornerRadius="10" HeightRequest="40" FontSize="18"
-                                FontAttributes="Bold" BackgroundColor="#F38717"/>
+                                    CornerRadius="10" HeightRequest="40" FontSize="18"
+                                    FontAttributes="Bold" BackgroundColor="#FAB442"/>
                         <Button Margin="20, 0, 0, 0" Text="Daily" Padding="0" 
-                                WidthRequest="124" CornerRadius="10"
-                                HeightRequest="40" FontSize="18" BackgroundColor="White"
-                                TextColor="Black" FontAttributes="Bold"/>
+                            WidthRequest="124" CornerRadius="10"
+                            HeightRequest="40" FontSize="18" BackgroundColor="#FBC267"
+                            TextColor="White"/>
                     </HorizontalStackLayout>
                     <CollectionView IsVisible="{Binding IsNotBusy}"
                                 HeightRequest="160"
@@ -83,7 +82,7 @@
                     </CollectionView.ItemsLayout>
                     <CollectionView.ItemTemplate>
                         <DataTemplate x:DataType="model:Hour">
-                            <Frame Background="#F38717"
+                                <Frame Background="#FAB442"
                                     CornerRadius="15"
                                     WidthRequest="70"
                                     HeightRequest="130"
@@ -91,17 +90,18 @@
                                 <VerticalStackLayout WidthRequest="80" VerticalOptions="Center">
                                     <Image WidthRequest="50"
                                             HeightRequest="50"
-                                            Source="{Binding Condition.Icon, StringFormat='https:{0}'}"/>
+                                            Source="{Binding Condition.Icon, StringFormat='https:{0}'}"
+                                           />
                                     <Label Text="{Binding Time, StringFormat='{0}'}"
-                                            FontFamily="Calibri"
-                                            FontAttributes="Bold"
-                                            HorizontalTextAlignment="Center"
-                                            FontSize="14" Margin="0, 3, 0, 0"/>
+                                    FontFamily="Calibri"
+                                    FontAttributes="Bold"
+                                    HorizontalTextAlignment="Center"
+                                    FontSize="14" Margin="0, 3, 0, 0"/>
                                     <Label Text="{Binding TempC, StringFormat='{0:F1} °C'}"
-                                            FontSize="16"
-                                            FontFamily="Calibri" FontAttributes="Bold"
-                                            HorizontalTextAlignment="Center"
-                                            IsVisible="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:HomeViewModel}}, Path=IsCelsius}"/>
+                                    FontSize="16"
+                                    FontFamily="Calibri" FontAttributes="Bold"
+                                    HorizontalTextAlignment="Center"
+                                    IsVisible="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:HomeViewModel}}, Path=IsCelsius}"/>
                                     <Label Text="{Binding TempF, StringFormat='{0:F1} °F'}"
                                             FontSize="16"
                                             FontFamily="Calibri" FontAttributes="Bold"
