--- a/WeatherApp/Resources/Styles/Styles.xaml
+++ b/WeatherApp/Resources/Styles/Styles.xaml
@@ -1,10 +1,8 @@
 ﻿<?xml version="1.0" encoding="UTF-8" ?>
 <?xaml-comp compile="true" ?>
-<ResourceDictionary 
-    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
+<ResourceDictionary xmlns="http://schemas.microsoft.com/dotnet/2021/maui" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
 
-    <Style TargetType="Shell" ApplyToDerivedTypes="True">
+    <Style ApplyToDerivedTypes="True" TargetType="Shell">
         <Setter Property="Shell.BackgroundColor" Value="{StaticResource Primary}" />
         <!--<Setter Property="Shell.ForegroundColor" Value="{StaticResource Primary}" />-->
         <Setter Property="Shell.NavBarIsVisible" Value="False" />
