--- a/WeatherApp/View/HomePage.xaml
+++ b/WeatherApp/View/HomePage.xaml
@@ -62,56 +62,97 @@
         <AbsoluteLayout Margin="0, 50, 0, 0" HeightRequest="400">
             <Frame Margin="20, 50, 0, 0" WidthRequest="350"
                    HeightRequest="260" CornerRadius="40" BackgroundColor="{Binding TransparentBackground}">
-                <StackLayout VerticalOptions="Center">
+                <StackLayout VerticalOptions="Center" Margin="0, 20, 0, 0">
                     <HorizontalStackLayout HorizontalOptions="Center">
                         <Button Text="Hourly" Padding="0" WidthRequest="124" Margin="10, 0, 0, 0"
                                     CornerRadius="10" HeightRequest="40" FontSize="18"
-                                    FontAttributes="Bold" BackgroundColor="{Binding PrimaryColor}"/>
+                                    FontAttributes="Bold" BackgroundColor="{Binding PrimaryColor}" Command="{Binding ToggleCollectionHourly}"/>
                         <Button Margin="20, 0, 0, 0" Text="Daily" Padding="0" 
                             WidthRequest="124" CornerRadius="10"
                             HeightRequest="40" FontSize="18" BackgroundColor="{Binding SecondaryColor}"
-                            TextColor="White"/>
+                            TextColor="White" Command="{Binding ToggleCollectionDaily}"/>
                     </HorizontalStackLayout>
-                    <CollectionView IsVisible="{Binding IsNotBusy}"
+                    <CollectionView 
+                                IsVisible="{Binding IsHourly}"
                                 HeightRequest="160"
                                 ItemsSource="{Binding WeatherForecastHours}"
                                 VerticalScrollBarVisibility="Never"
                                 HorizontalScrollBarVisibility="Never">
-                    <CollectionView.ItemsLayout>
-                        <LinearItemsLayout Orientation="Horizontal" SnapPointsAlignment="Start"/>
-                    </CollectionView.ItemsLayout>
-                    <CollectionView.ItemTemplate>
-                        <DataTemplate x:DataType="model:Hour">
+                        <CollectionView.ItemsLayout>
+                            <LinearItemsLayout Orientation="Horizontal" SnapPointsAlignment="Start"/>
+                        </CollectionView.ItemsLayout>
+                        <CollectionView.ItemTemplate>
+                            <DataTemplate x:DataType="model:Hour">
                                 <Frame Background="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:HomeViewModel}}, Path=PrimaryColor}"
                                     CornerRadius="15"
                                     WidthRequest="70"
                                     HeightRequest="130"
                                     Margin="10, 50, 10, 30">
-                                <VerticalStackLayout WidthRequest="80" VerticalOptions="Center">
-                                    <Image WidthRequest="50"
+                                    <VerticalStackLayout WidthRequest="80" VerticalOptions="Center">
+                                        <Image WidthRequest="50"
                                             HeightRequest="50"
                                             Source="{Binding Condition.Icon, StringFormat='https:{0}'}"
                                            />
-                                    <Label Text="{Binding Time, StringFormat='{0}'}"
+                                        <Label Text="{Binding Time, StringFormat='{0}'}"
                                     FontFamily="Calibri"
                                     FontAttributes="Bold"
                                     HorizontalTextAlignment="Center"
                                     FontSize="14" Margin="0, 3, 0, 0"/>
-                                    <Label Text="{Binding TempC, StringFormat='{0:F1} °C'}"
+                                        <Label Text="{Binding TempC, StringFormat='{0:F1} °C'}"
                                     FontSize="16"
                                     FontFamily="Calibri" FontAttributes="Bold"
                                     HorizontalTextAlignment="Center"
                                     IsVisible="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:HomeViewModel}}, Path=IsCelsius}"/>
-                                    <Label Text="{Binding TempF, StringFormat='{0:F1} °F'}"
+                                        <Label Text="{Binding TempF, StringFormat='{0:F1} °F'}"
                                             FontSize="16"
                                             FontFamily="Calibri" FontAttributes="Bold"
                                             HorizontalTextAlignment="Center"
                                             IsVisible="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:HomeViewModel}}, Path=IsFerenheit}"/>
-                                </VerticalStackLayout>
-                            </Frame>
-                        </DataTemplate>
-                    </CollectionView.ItemTemplate>
-                </CollectionView>
+                                    </VerticalStackLayout>
+                                </Frame>
+                            </DataTemplate>
+                        </CollectionView.ItemTemplate>
+                    </CollectionView>
+                    <CollectionView 
+                                IsVisible="{Binding IsDaily}"
+                                HeightRequest="160"
+                                ItemsSource="{Binding WeatherForecastDays}"
+                                VerticalScrollBarVisibility="Never"
+                                HorizontalScrollBarVisibility="Never">
+                        <CollectionView.ItemsLayout>
+                            <LinearItemsLayout Orientation="Horizontal" SnapPointsAlignment="Start"/>
+                        </CollectionView.ItemsLayout>
+                        <CollectionView.ItemTemplate>
+                            <DataTemplate x:DataType="model:Forecastday">
+                                <Frame Background="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:HomeViewModel}}, Path=PrimaryColor}"
+                                       CornerRadius="15"
+                                       WidthRequest="70"
+                                       HeightRequest="130"
+                                       Margin="22, 50, 10, 30">
+                                    <VerticalStackLayout WidthRequest="80" VerticalOptions="Center">
+                                        <Image WidthRequest="50"
+                                               HeightRequest="50"
+                                               Source="{Binding Day.Condition.Icon, StringFormat='https:{0}'}"/>
+                                        <Label Text="{Binding Date}"
+                                               FontFamily="Calibri"
+                                               FontAttributes="Bold"
+                                               HorizontalTextAlignment="Center"
+                                               FontSize="14" Margin="0, 3, 0, 0"/>
+                                        <Label Text="{Binding Day.AvgtempC, StringFormat='{0:F1} °C'}"
+                                               FontSize="16"
+                                               FontFamily="Calibri" FontAttributes="Bold"
+                                               HorizontalTextAlignment="Center"
+                                               IsVisible="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:HomeViewModel}}, Path=IsCelsius}"/>
+                                        <Label Text="{Binding Day.AvgtempF, StringFormat='{0:F1} °F'}"
+                                               FontSize="16"
+                                               FontFamily="Calibri" FontAttributes="Bold"
+                                               HorizontalTextAlignment="Center"
+                                               IsVisible="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:HomeViewModel}}, Path=IsFerenheit}"/>
+                                    </VerticalStackLayout>
+                                </Frame>
+                            </DataTemplate>
+                        </CollectionView.ItemTemplate>
+                    </CollectionView>
                 </StackLayout>
             </Frame>
         </AbsoluteLayout>
